--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "browser-sync": "browser-sync start --server"
   },
   "keywords": [],
   "author": "gengwenhao",
   "license": "MIT",
   "devDependencies": {
-    "vite": "3.0.7"
+    "@vitejs/plugin-vue": "3.0.3",
+    "@vitejs/plugin-vue-jsx": "2.0.0",
+    "vite": "3.0.7",
+    "browser-sync": "^2.27.10"
   },
   "dependencies": {
     "vue": "3.2.37"
